link target and spacing fix (#155)

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -171,5 +171,10 @@ footer .footer-black .columns.copyright ul li a {
     height: 46px;
     max-width: 46px;
     background: transparent url('../../icons/acn-brand-icon.svg') no-repeat;
+    padding-right: 15px;
+  }
+
+  footer .footer-black .columns:not(.columns.copyright) ul{
+    column-gap: 45px;
   }
 }
